Bug 100906 - compilation fails because MusicBrainz isn't Tunepimp
Summary: compilation fails because MusicBrainz isn't Tunepimp
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (show other bugs)
Version: 1.3-CVS
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-03-05 19:42 UTC by Thiago Macieira
Modified: 2006-06-11 12:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Macieira 2005-03-05 19:42:39 UTC
Hello, this is latest HEAD and amaroK won't compile. 
 
The whole issue is caused by the fact that amaroK assumes that MusicBrainz is 
libtunepimp, which isn't true. libmusicbrainz exists and is independent from 
libtunepimp. 
 
The problem is aggravated by the fact that amarok lives in kdeextragear-1 
along with k3b, which *does* use libmusicbrainz. And the fact that k3b has a 
broken definition of HAVE_MUSICBRAINZ (the same as juk's). I will be reporting 
minor bugs for juk and k3b shortly. 
 
What I recommend is actually quite simple, for all 3: 
1) do not define constants to be 0; instead, use #undef (k3b and juk problems) 
2) separate the detections and tests for libmusicbrainz and libtunepimp, 
having separate #defines for each 
 
Please coordinate with k3b's developers so that the tests you both use don't 
clash with each other. 
 
I have got two errors in during compilation relating to this. The first was: 
/home/thiago/programs/src/kde/kdeextragear-1/amarok/src/ktrm.cpp:38:27: 
tunepimp/tp_c.h: No such file or directory 
 
The second: 
/home/thiago/programs/src/kde/kdeextragear-1/amarok/src/tagdialog.cpp: In 
member function `void TagDialog::queryDone(KTRMResultList)': 
/home/thiago/programs/src/kde/kdeextragear-1/amarok/src/tagdialog.cpp:162: 
error: `TrackPickerDialog' undeclared (first use this function) 
 
$ grep HAVE_MUSICBRAINZ config.h 
#define HAVE_MUSICBRAINZ 0 
(it is defined by k3b to be 0)
Comment 1 Thiago Macieira 2005-03-05 19:54:54 UTC
k3b bug #100907, juk bug #100908
Comment 2 Mark Kretschmann 2005-03-07 11:01:59 UTC
CVS commit by markey: 

FIX: amaroK could fail to build if the whole kdeextragear-1 module was compiled, due to a conflict with K3B on the MusicBrainz check.

Thiago, I hope this fix is ok. Testing welcome.

BUG: 100906
CCMAIL: amarok-devel@lists.sf.net


  M +31 -0     ChangeLog   1.543
  M +4 -0      configure.in.bot   1.32
  M +9 -6      configure.in.in   1.95
  M +1 -1      src/Makefile.am   1.171
  M +24 -24    src/ktrm.cpp   1.10
  M +5 -5      src/tagdialog.cpp   1.52
  M +2 -2      src/trackpickerdialog.cpp   1.3
  M +2 -2      src/trackpickerdialog.h   1.3



Comment 3 Thiago Macieira 2005-03-07 12:59:15 UTC
It seems to fix the problem.