FIX: amaroK could fail to build if the whole kdeextragear-1 module was compiled, due to a conflict with K3B on the MusicBrainz check.

Thiago, I hope this fix is ok. Testing welcome.

BUG: 100906
CCMAIL: amarok-devel@lists.sf.net

svn path=/trunk/kdeextragear-1/amarok/; revision=395437